--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     }
 
     .btn-grad-green:hover {
-      background-position: right center; /* change the direction of the change here */
+      background-position: right center;
       color: #fff;
       text-decoration: none;
     }
